Fin de l'utilisation du mode QGraphicsView::CacheBackground afin de ne pas provoquer un bug de rendu lorsque le RubberBand passe en dehors du sceneRect cf http://bugreports.qt.nokia.com/browse/QTBUG-4368

git-svn-id: svn+ssh://svn.tuxfamily.org/svnroot/qet/qet/trunk@792 bfdf4180-ca20-0410-9c96-a3a8aa849046